tests/snapshots/integration__integration_tests__shell_wrapper__unix_tests__readme_example_approval_prompt.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: prompt_only
---
n

▲ repo needs approval to execute 3 commands:
○ pre-start install:
  echo 'Installing dependencies...'
○ pre-start build:
  echo 'Building project...'
○ pre-start test:
  echo 'Running tests...'

❯ Allow and remember? [y/N]
