tests/snapshots/integration__integration_tests__shell_wrapper__unix_tests__readme_example_switch_back.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: "&output.combined"
---

[2m○[22m Switched to worktree for [1mfeature-api[22m @ [1m_REPO_.feature-api[22m
[0m
