tests/snapshots/integration__integration_tests__shell_wrapper__unix_tests__step_for_each.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: "&output.combined"
---

[36m◎[39m [36mRunning in [1mmain[22m...[39m
[0mBranch: main
[36m◎[39m [36mRunning in [1mfeature-a[22m...[39m
[0mBranch: feature-a
[36m◎[39m [36mRunning in [1mfeature-b[22m...[39m
[0mBranch: feature-b

[32m✓[39m [32mCompleted in 3 worktrees[39m
[0m
